# axone-test

./: .env  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
data/: clean.csv  data.csv
question2/: api.py  docker-compose.yaml  raw.txt
question2/logstash/data/: data.txt  uuid
question2/logstash/pipeline/: logstash.conf
question3/: docker-compose.yaml  pyproject.toml
question3/dags/: dag.py
question3/data/: clean.csv  data.csv
question3/src/: extract.py  transform.py
question3/tests/: test_transformation.py
src/: extract.py  load_to_db.py
tests/: test_mongo.py
